--- a/assets/styles/_cart.scss
+++ b/assets/styles/_cart.scss
@@ -76,5 +76,453 @@
         text-transform: capitalize;
       }
     }
+    .adding__section{
+      height: 300px;
+    }
+  }
+  .calculate {
+    display: flex;
+    gap: 24px;
+    margin-bottom: 80px;
+
+    &__left {
+      h2 {
+        color: rgb(17, 17, 17);
+        font-family: Raleway;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 37.5px;
+        letter-spacing: 0%;
+        text-align: left;
+        text-transform: capitalize;
+        margin-bottom: 30px;
+      }
+      .country {
+        .place {
+          display: flex;
+          gap: 24px;
+          margin-bottom: 16px;
+        }
+        #country {
+          width: 361px;
+          height: 45px;
+          box-sizing: border-box;
+          border: 1px solid rgb(206, 212, 218);
+          background: rgb(255, 255, 255);
+          padding: 9px 13px;
+          outline: none;
+        }
+        #country {
+          color: rgb(86, 86, 86);
+          font-family: Poppins;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 24px;
+          letter-spacing: 0%;
+          text-align: left;
+        }
+
+        .code {
+          display: flex;
+          gap: 24px;
+          margin-bottom: 40px;
+        }
+        .zip {
+          width: 361px;
+          height: 45px;
+          box-sizing: border-box;
+          border: 1px solid rgb(206, 212, 218);
+          background: rgb(255, 255, 255);
+          padding: 9px 13px;
+          outline: none;
+        }
+        #zip__code {
+          border: none;
+          outline: none;
+          height: 100%;
+        }
+        #zip__code::placeholder {
+          color: rgb(86, 86, 86);
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 21px;
+          letter-spacing: 0%;
+          text-align: left;
+        }
+        .estimate__btn {
+          width: 130px;
+          height: 44px;
+          box-sizing: border-box;
+          border: 1px solid rgb(90, 90, 201);
+          background: rgb(90, 90, 201);
+
+          a {
+            color: rgb(255, 255, 255);
+            font-family: Raleway;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 14px;
+            letter-spacing: 0%;
+            text-align: center;
+            text-transform: uppercase;
+          }
+        }
+      }
+      h3 {
+        color: rgb(17, 17, 17);
+        font-family: Raleway;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 25px;
+        letter-spacing: 0%;
+        text-align: left;
+        text-transform: capitalize;
+        margin-bottom: 15px;
+      }
+      .coupon__holder {
+        display: flex;
+        gap: 24px;
+
+        .coupon {
+          display: flex;
+          align-items: center;
+          width: 361px;
+          height: 45px;
+          box-sizing: border-box;
+          border: 1px solid rgb(230, 230, 230);
+          padding: 12px 21px;
+
+          #coupon__code {
+            color: rgb(86, 86, 86);
+            font-family: Poppins;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 21px;
+            letter-spacing: 0%;
+            text-align: left;
+            border: none;
+            outline: none;
+          }
+        }
+        .coupon__btn {
+          width: 146px;
+          box-sizing: border-box;
+          border: 1px solid rgb(90, 90, 201);
+          background: rgb(90, 90, 201);
+
+          a {
+            color: rgb(255, 255, 255);
+            font-family: Raleway;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 14px;
+            letter-spacing: 0%;
+            text-align: center;
+            text-transform: uppercase;
+          }
+        }
+      }
+    }
+    &__right {
+      .total__holder {
+        width: 526px;
+        height: 218px;
+        padding: 38px 45px;
+        background: rgb(246, 246, 246);
+        margin-bottom: 25px;
+
+        .product {
+          display: flex;
+          justify-content: space-between;
+
+          p {
+            color: rgb(17, 17, 17);
+            font-family: Poppins;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 26.25px;
+            letter-spacing: 0%;
+            text-align: left;
+            text-transform: capitalize;
+          }
+        }
+
+        .shipping {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 18px;
+
+          p:first-child {
+            color: rgb(17, 17, 17);
+            font-family: Poppins;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 26.25px;
+            letter-spacing: 0%;
+            text-align: left;
+          }
+          p {
+            color: rgb(86, 86, 86);
+            font-family: Poppins;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 24.5px;
+            letter-spacing: 0%;
+            text-align: left;
+          }
+        }
+
+        .total__summa {
+          display: flex;
+          justify-content: space-between;
+          box-sizing: border-box;
+          border-bottom: 1px solid rgb(222, 224, 228);
+          border-top: 1px solid rgb(222, 224, 228);
+          padding: 18px 0;
+
+          p {
+            color: rgb(17, 17, 17);
+            font-family: Poppins;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 26.25px;
+            letter-spacing: 0%;
+            text-align: left;
+          }
+          span {
+            color: rgb(90, 90, 201);
+            font-family: Poppins;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 28px;
+            letter-spacing: 0%;
+            text-align: left;
+          }
+        }
+      }
+
+      .sending {
+        display: flex;
+        gap: 20px;
+
+        .btn1 {
+          width: 157px;
+          height: 46px;
+        }
+        .btn2 {
+          width: 138px;
+          height: 46px;
+        }
+        .btn {
+          padding: 16px 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: none;
+          outline: none;
+          box-sizing: border-box;
+          border: 1px solid rgb(90, 90, 201);
+          background: rgb(90, 90, 201);
+
+          a {
+            color: rgb(255, 255, 255);
+            font-family: Raleway;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 14px;
+            letter-spacing: 0%;
+            text-align: center;
+            text-transform: uppercase;
+          }
+        }
+      }
+    }
+  }
+}
+.footer {
+  background: rgb(239, 239, 239);
+  padding-top: 80px;
+  &__holder {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 95px;
+    .about__site {
+      width: 400px;
+      img {
+        width: 114px;
+        height: 34px;
+        margin-bottom: 24.4px;
+      }
+      p {
+        color: rgb(86, 86, 86);
+        font-family: Poppins;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24.01px;
+        letter-spacing: 0%;
+        text-align: left;
+        margin-bottom: 29.6px;
+      }
+      .social {
+        display: flex;
+        gap: 10px;
+        button {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          padding: 5px;
+          border: none;
+          background: rgb(255, 255, 255);
+          cursor: pointer;
+
+          img {
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+    }
+    .information {
+      width: 196px;
+      p {
+        color: rgb(17, 17, 17);
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 22.5px;
+        letter-spacing: 0%;
+        text-align: left;
+        text-transform: capitalize;
+        margin-bottom: 18.7px;
+      }
+      .first__line {
+        background: rgb(90, 90, 201);
+        border: none;
+        width: 60px;
+        height: 2px;
+      }
+      .second__line {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid rgb(222, 226, 230);
+        margin-bottom: 24.4px;
+      }
+      li {
+        margin-bottom: 5.5px;
+        a {
+          color: rgb(86, 86, 86);
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 24px;
+          letter-spacing: 0%;
+          text-align: left;
+          text-transform: capitalize;
+        }
+      }
+    }
+    .newsletter {
+      width: 416px;
+      p {
+        color: rgb(17, 17, 17);
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 22.5px;
+        letter-spacing: 0%;
+        text-align: left;
+        text-transform: capitalize;
+        margin-bottom: 18.7px;
+      }
+      .first__line {
+        background: rgb(90, 90, 201);
+        border: none;
+        width: 60px;
+        height: 2px;
+      }
+      .second__line {
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid rgb(222, 226, 230);
+        margin-bottom: 24.4px;
+      }
+      .text {
+        color: rgb(86, 86, 86);
+        font-family: Poppins;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0%;
+        text-align: left;
+        text-transform: capitalize;
+        margin-bottom: 19.6px;
+      }
+      form {
+        width: 416px;
+        height: 47px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-sizing: border-box;
+        border: 1px solid rgb(255, 255, 255);
+        border-radius: 30px;
+        background: rgb(255, 255, 255);
+        #email {
+          width: 273px;
+          background: transparent;
+          border: none;
+          outline: none;
+          margin: 13.1px 11px;
+        }
+        #email::placeholder {
+          color: rgb(86, 86, 86);
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 21px;
+          letter-spacing: 0%;
+          text-align: left;
+        }
+        button {
+          width: 100px;
+          height: 47px;
+          right: 0;
+          box-sizing: border-box;
+          border: none;
+          border-top-right-radius: 30px;
+          border-bottom-right-radius: 30px;
+          background: #5a5ac9;
+          cursor: pointer;
+
+          a {
+            font-size: 16px;
+            text-transform: capitalize;
+            color: white;
+          }
+        }
+      }
+    }
+  }
+  .footer__line {
+    display: flex;
+    align-items: center;
+    height: 54.5px;
+    background: rgb(17, 17, 17);
+    .last__holder {
+      display: flex;
+      justify-content: space-between;
+      .footer__left {
+        p {
+          font-family: Poppins;
+          color: white;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 24.01px;
+          letter-spacing: 0%;
+          text-align: left;
+        }
+      }
+    }
   }
 }
